# tauri-plugin-share-v2

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package.json
.github/workflows/: build-android.yml
android/: build.gradle.kts
android/src/androidTest/java/: SharePluginInstrumentedTest.kt
android/src/main/java/: SharePlugin.kt
android/src/test/java/com/plugin/share/: SharePluginTest.kt
examples/tauri-app/: package.json  vite.config.js
examples/tauri-app/scripts/: patch-android-signing.sh
examples/tauri-app/src/: index.html  main.js
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/Sources/: SharePlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
