[package]
name = "tauri-plugin-share"
version = "0.1.0"
authors = ["Erle Carrara"]
description = "A Tauri v2 plugin for native share sheet functionality on mobile platforms"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/ecarrara/tauri-plugin-share-v2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-share"

[dependencies]
tauri = { version = "2.10.0" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
