[package]
name = "tauri-plugin-share-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-share = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
